--- a/boards/arm/a28/a28.dts
+++ b/boards/arm/a28/a28.dts
@@ -25,7 +25,7 @@
         zmk,physical-layout = &ms60_all;
     };
 
-    ms60_all_transform: Layout 0 {
+    layout_0: Layout 0 {
 		compatible = "zmk,matrix-transform";
 		columns = <10>;
 		rows = <3>;
