--- a/boards/arm/a28/a28.dts
+++ b/boards/arm/a28/a28.dts
@@ -22,7 +22,7 @@
         zephyr,flash = &flash0;
         zmk,battery = &vbatt;
         zmk,kscan = &kscan0;
-        zmk,physical-layout = &Layout 0;
+        zmk,physical-layout = &a28_all;
     };
 
     layout_0: Layout 0 {
