--- a/boards/arm/a28/a28.dts
+++ b/boards/arm/a28/a28.dts
@@ -22,7 +22,7 @@
         zephyr,flash = &flash0;
         zmk,battery = &vbatt;
         zmk,kscan = &kscan0;
-        zmk,physical-layout = &a28_all;
+        zmk,physical-layout = &a28_0;
     };
 
     a28_all_transform: a28_all_transform {
