--- a/boards/arm/a28/a28.dts
+++ b/boards/arm/a28/a28.dts
@@ -122,17 +122,14 @@ zephyr_udc0: &usbd {
         #size-cells = <1>;
 
         sd_partition: partition@0 {
-            label = "mbr";
-            reg = <0x00000000 0x00001000>;
+            reg = <0x00000000 0x00026000>;
         };
-
-        code_partition: partition@1000 {
-            label = "code_partition";
-            reg = <0x00001000 0x000d3000>;
+        code_partition: partition@26000 {
+            reg = <0x00026000 0x000c6000>;
         };
 
         /*
-         * The flash starting at 0x000d4000 and ending at
+         * The flash starting at 0x000ec000 and ending at
          * 0x000f3fff is reserved for use by the application.
          */
 
@@ -140,13 +137,11 @@ zephyr_udc0: &usbd {
          * Storage partition will be used by FCB/LittleFS/NVS
          * if enabled.
          */
-        storage_partition: partition@d4000 {
-            label = "storage";
-            reg = <0x000d4000 0x00020000>;
+        storage_partition: partition@ec000 {
+            reg = <0x000ec000 0x00008000>;
         };
 
         boot_partition: partition@f4000 {
-            label = "adafruit_boot";
             reg = <0x000f4000 0x0000c000>;
         };
     };
